fix #887 setHeaderTextAlignment is not respected on empty DataTable

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-forms.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-forms.css
@@ -256,7 +256,11 @@ fieldset.dui {
     min-height: var(--dui-form-field-fixed-messages-height);
 }
 
-.dui-form-field:not(.dui-form-messages-fixed) .dui-field-messages-wrapper:empty {
+.dui-form-messages-fixed .dui-field-messages-wrapper:empty{
+    display: flex;
+}
+
+.dui-field-messages-wrapper:empty {
     display: none;
 }
 
